tests/snapshots/define__define_no_line_break.snap
---
source: tests/define.rs
assertion_line: 30
expression: collect_tokens(&mut lexer)
snapshot_kind: text
---
[
  {
    "kind": {
      "PreprocDir": "MDefine"
    },
    "text": "#define",
    "range_start": 0,
    "range_end": 7,
    "delta": 0,
    "in_preprocessor": true
  },
  {
    "kind": "Identifier",
    "text": "FOO",
    "range_start": 8,
    "range_end": 11,
    "delta": 1,
    "in_preprocessor": true
  },
  {
    "kind": {
      "Literal": "IntegerLiteral"
    },
    "text": "1",
    "range_start": 12,
    "range_end": 13,
    "delta": 1,
    "in_preprocessor": true
  },
  {
    "kind": "Eof",
    "text": "\u0000",
    "range_start": 13,
    "range_end": 13,
    "delta": 0,
    "in_preprocessor": false
  }
]
